# backend/docs/swagger.json
@@ -898,24 +898,35 @@
                 "tags": [
                     "Robot"
                 ],
-                "summary": "获取机器人列表",
-                "operationId": "searchRobots",
+                "summary": "批量搜索机器人",
+                "operationId": "ListRobots",
                 "parameters": [
                     {
-                        "description": "查询参数",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/GetRobotListParams"
-                        }
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "分页大小",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "名称",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/backend_api_v1.GetRobotListResponse"
+                            "$ref": "#/definitions/backend_api_v1.RobotSearchResponse"
                         }
                     }
                 }
@@ -936,7 +947,7 @@
                     "Robot"
                 ],
                 "summary": "创建机器人",
-                "operationId": "addRobot",
+                "operationId": "CreateRobot",
                 "parameters": [
                     {
                         "description": "机器人数据",
@@ -944,7 +955,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/RobotCreateParams"
+                            "$ref": "#/definitions/RobotParams"
                         }
                     }
                 ],
@@ -974,8 +985,8 @@
                 "tags": [
                     "Robot"
                 ],
-                "summary": "获取机器人",
-                "operationId": "fetchRobotDetail",
+                "summary": "查找机器人",
+                "operationId": "GetRobot",
                 "parameters": [
                     {
                         "type": "integer",
@@ -989,7 +1000,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/backend_api_v1.GetRobotResponse"
+                            "$ref": "#/definitions/backend_api_v1.RobotResponse"
                         }
                     }
                 }
@@ -1010,7 +1021,7 @@
                     "Robot"
                 ],
                 "summary": "更新机器人",
-                "operationId": "updateRobot",
+                "operationId": "UpdateRobot",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1025,7 +1036,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/RobotUpdateParams"
+                            "$ref": "#/definitions/RobotParams"
                         }
                     }
                 ],
@@ -1054,7 +1065,7 @@
                     "Robot"
                 ],
                 "summary": "删除机器人",
-                "operationId": "RemoveRobot",
+                "operationId": "DeleteRobot",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1148,30 +1159,6 @@
                 }
             }
         },
-        "GetRobotListParams": {
-            "type": "object",
-            "required": [
-                "current",
-                "pageSize"
-            ],
-            "properties": {
-                "current": {
-                    "description": "页码",
-                    "type": "integer",
-                    "example": 1
-                },
-                "name": {
-                    "description": "筛选项: 名称 模糊匹配",
-                    "type": "string",
-                    "example": "bot"
-                },
-                "pageSize": {
-                    "description": "分页大小",
-                    "type": "integer",
-                    "example": 10
-                }
-            }
-        },
         "LoginParams": {
             "type": "object",
             "required": [
@@ -1258,32 +1245,6 @@
                 }
             }
         },
-        "RobotCreateParams": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "callback": {
-                    "type": "string"
-                },
-                "desc": {
-                    "type": "string"
-                },
-                "enabled": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "owner": {
-                    "type": "string"
-                },
-                "webhook": {
-                    "type": "string"
-                }
-            }
-        },
         "RobotList": {
             "type": "object",
             "properties": {
@@ -1298,11 +1259,8 @@
                 }
             }
         },
-        "RobotUpdateParams": {
+        "RobotParams": {
             "type": "object",
-            "required": [
-                "id"
-            ],
             "properties": {
                 "callback": {
                     "type": "string"
@@ -1312,11 +1270,6 @@
                 },
                 "enabled": {
                     "type": "boolean"
-                },
-                "id": {
-                    "description": "ID",
-                    "type": "integer",
-                    "example": 1
                 },
                 "name": {
                     "type": "string"
@@ -1401,52 +1354,6 @@
                 "path": {
                     "type": "string",
                     "example": "/v1/xxx"
-                }
-            }
-        },
-        "backend_api_v1.GetRobotListResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/RobotList"
-                },
-                "errorCode": {
-                    "description": "错误码",
-                    "type": "integer"
-                },
-                "errorMessage": {
-                    "description": "报错信息",
-                    "type": "string"
-                },
-                "errorShowType": {
-                    "description": "前端展示方式",
-                    "type": "integer"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "backend_api_v1.GetRobotResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/Robot"
-                },
-                "errorCode": {
-                    "description": "错误码",
-                    "type": "integer"
-                },
-                "errorMessage": {
-                    "description": "报错信息",
-                    "type": "string"
-                },
-                "errorShowType": {
-                    "description": "前端展示方式",
-                    "type": "integer"
-                },
-                "success": {
-                    "type": "boolean"
                 }
             }
         },
@@ -1847,6 +1754,52 @@
             "type": "object",
             "properties": {
                 "data": {},
+                "errorCode": {
+                    "description": "错误码",
+                    "type": "integer"
+                },
+                "errorMessage": {
+                    "description": "报错信息",
+                    "type": "string"
+                },
+                "errorShowType": {
+                    "description": "前端展示方式",
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "backend_api_v1.RobotResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/Robot"
+                },
+                "errorCode": {
+                    "description": "错误码",
+                    "type": "integer"
+                },
+                "errorMessage": {
+                    "description": "报错信息",
+                    "type": "string"
+                },
+                "errorShowType": {
+                    "description": "前端展示方式",
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "backend_api_v1.RobotSearchResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/RobotList"
+                },
                 "errorCode": {
                     "description": "错误码",
                     "type": "integer"
