# backend/internal/model/robot.go
@@ -6,11 +6,11 @@ type Robot struct {
 	gorm.Model
 
 	Name     string `gorm:"type:varchar(255);not null;comment:'名称'"`
-	Desc     string `gorm:"type:varchar(255);not null;comment:'描述'"`
-	Webhook  string `gorm:"unique;not null;comment:'Webhook'"`
-	Callback string `gorm:"unique;not null;comment:'Callback'"`
-	Enabled  bool   `gorm:"default:true;comment:'是否启用'"`
-	Owner    string `gorm:"type:varchar(255);not null;comment:'所有者'"`
+	Desc     string `gorm:"type:varchar(255);comment:'描述'"`
+	Webhook  string `gorm:"type:varchar(255);comment:'Webhook'"`
+	Callback string `gorm:"type:varchar(255);comment:'Callback'"`
+	Enabled  bool   `gorm:"type:tinyint(1);default:true;comment:'是否启用'"`
+	Owner    string `gorm:"type:varchar(255);comment:'所有者'"`
 }
 
 func (m *Robot) TableName() string {
